[project]
name = "microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "aiohttp>=3.13.3",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi[standard]>=0.128.0",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
]
